# radancy_usecase

./: .gitignore  Dockerfile  README.md  app.py  eda.ipynb  k8_deployment.yaml  main.py  pyproject.toml
.github/workflows/: docker.yml
explore/: presentation.ipynb  utils.py
resources/data/: historical_publishers.csv  test_predict.csv
resources/docs/: campaign_conversion_report.html
resources/models/: cpa_regressor.joblib
src/: predict.py  training.py
