[project]
name = "radancy-usecase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "scikit-learn>=1.6.1",
    "shap>=0.47.2",
    "uvicorn>=0.34.2",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "ruff>=0.11.6",
    "matplotlib>=3.10.0",
    "pandas-profiling>=3.6.6",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.ruff]
exclude = ["*.ipynb"]
